# sikuli-framework

./: .gitignore  .project  .pydevproject  BUILD.md  LICENSE.TXT  README.md  pyproject.toml  pytest.ini  run.py
baseline/Calculator/: Calculator[0].py
docs/: migration-feature-matrix.md  migration-sikuligo-python-plan.md
examples/calculator/: add.py  add.tsv  validate.py
examples/textedit/: resize.py
keywords/: RFSikuliLib.py
keywords/common/: RegistryLib.py  STAXLib.py  Selenium2Lib.py  Selenium2Server.py  ShellLib.py  ToolsLib.py  VMWareLib.py
maps/: __init__.py
maps/calculator/: calculator.py
quickstart/calculator/: add.py  validate.py
resources/: __init__.py
resources/keywords/: RFSikuliLib.py  rfSikuliFwLib.py
resources/maps/: calculator.py  textedit.py
sandbox/: calculator.py
src/: bootstrap.py  compat.py  config.py  error.py  launcher.py  tool.py  wrapper.py
src/adapters/: __init__.py  sikuligo_backend.py  types.py
src/entity/: __init__.py  clickStrategy.py  entity.py  exception.py  multiResultProxy.py  searcher.py
src/lib/: robotremoteserver.py
src/log/: __init__.py  entityLoggerProxy.py  formatter.py  level.py  logger.py
src/nativeSikuli/: __init__.py
src/region/: __init__.py  exception.py  finder.py  transform.py
src/robotframework/: __init__.py  draw_callback_patch.html  robotRemoteServer.py  (+1 more)
tests/: conftest.py  test_entity_input_migration.py  test_finder_migration.py  test_formatter_capture_migration.py  test_robotframework_adapter_migration.py  test_sample_map_integration.py  test_sikuligo_integration.py
(+97 files in other folders)
